Ajout classe Entite = {tours, ennemis}