@@ -8,77 +8,25 @@ import javafx.beans.property.SimpleDoubleProperty;
 import java.util.ArrayList;
 import java.util.List;
 
-public abstract class Animaux {
+public abstract class Animaux extends Entite{
 
-    private static int nbId =0;
-    private int id;
-    private GameWorld world;
 
     private List<Animaux> listeCibles;
-
-    private DoubleProperty x, y;
-
-
-    private boolean alive;
-
-    private DoubleProperty health = new SimpleDoubleProperty();
-    private final double maxHealth;
-
 
     private double vitesse;
     private double damage;
     private double range;
 
     public Animaux(double x, double y, double health, double vitesse, double dmg, double range, GameWorld w, List<Animaux> l) {
-        this.id=nbId;
-        nbId++;
-        this.x = new SimpleDoubleProperty(x);
-        this.y = new SimpleDoubleProperty(y);
-        this.health.set(health);
-        this.maxHealth = health;
+        super(x, y, health, w);
         this.vitesse = vitesse;
         this.damage = dmg;
         this.range = range;
-        this.world=w;
         this.listeCibles=l;
-
-        alive = true;
     }
     //Appelle les fonctions d'actions de l'animal tous les dt (fréquence d'action)
-    public abstract void update(double dt);
-    //attaque
-
-
-    public void destroy() {
-        alive = false;
-    }
-
-    public boolean isAlive() {
-        return alive;
-    }   //servira pr le clear
-
-    public String getId() {
-        return ""+id;
-    }
-
-    public DoubleProperty getXProperty() {
-        return x;
-    }
-    public DoubleProperty getYProperty() {
-        return y;
-    }
-    public double getX() { return x.getValue(); }
-    public double getY() { return y.getValue(); }
-    public void setX(double x) {
-        this.x.setValue(x);
-    }
-    public void setY(double y) {
-        this.y.setValue(y);
-    }
-
-    protected void setPosition(double x, double y) {
-        this.setX(x);
-        this.setY(y);
+    public void update(double dt){
+        this.attaque();
     }
 
     public void setVitesse(double vitesse) {
@@ -95,19 +43,7 @@ public abstract class Animaux {
         this.range = range;
     }
 
-    public GameWorld getWorld() {return world;}
 
-    public DoubleProperty getHealthProperty() {
-        return health;
-    }
-    public void setHealth(double value) {
-        health.set(Math.max(0, value));
-        if (value <= 0) destroy();
-    }
-
-    public double getMaxHealth() {
-        return maxHealth;
-    }
 
     public void setDamage(double damage) {
         this.damage = damage;
@@ -143,7 +79,7 @@ public abstract class Animaux {
 
         if (listeCibles.isEmpty()) return null;
 
-        Animaux proche= listeCibles.get(0);
+        Animaux proche= listeCibles.getFirst();
 
         for(Animaux a:this.listeCibles){
             if(Utilitaire.distance(this.getX(), this.getY(), a.getX(), a.getY())
@@ -186,7 +122,7 @@ public abstract class Animaux {
             health.set(0);
             this.destroy();
         }*/
-        setDamage(health.getValue()-damage);
+        setDamage(super.getHealthProperty().getValue()-damage);
     }
     public void attaque(){
         if(!this.getCiblesAccessibles().isEmpty())
@@ -196,4 +132,6 @@ public abstract class Animaux {
     public List<Animaux> getListeCibles(){
         return this.listeCibles;
     }
+
+
 }
